--- a/roles/galaxy-docker/tasks/backups/cronbackupdb.yml
+++ b/roles/galaxy-docker/tasks/backups/cronbackupdb.yml
@@ -51,9 +51,8 @@
 
 - name: set backup jobs in cron
   cron:
-    job: >
-      bash {{galaxy_docker_backup_location}}/scripts/{{item.key}}-backupscript.sh
-      >> {{log_file}} 2>&1
+    job: "bash {{galaxy_docker_backup_location}}/scripts/{{item.key}}-backupscript.sh
+      >> {{log_file}} 2>&1"
     state: present
     user: "{{galaxy_docker_docker_user}}"
     backup: yes
