--- a/roles/galaxy-docker/tasks/backups/extractdb.yml
+++ b/roles/galaxy-docker/tasks/backups/extractdb.yml
@@ -62,10 +62,10 @@
   shell: "docker exec -u {{user}} {{name}} {{command}} >> {{file}}"
   vars:
     name: "{{galaxy_docker_container_name}}"
-    command: >
+    command: "\
       pg_dump {{galaxy_docker_container_database_name}}
       --format={{galaxy_docker_db_format}}
-      -Z {{galaxy_docker_db_compression_level}}
+      -Z {{galaxy_docker_db_compression_level}}"
     user: "{{galaxy_docker_database_user}}"
     file: "{{galaxy_docker_extracted_db_location}}/{{galaxy_docker_extracted_db_filename}}"
   ignore_errors: true
