--- a/roles/galaxy-docker/tasks/provision/installtools.yml
+++ b/roles/galaxy-docker/tasks/provision/installtools.yml
@@ -60,12 +60,11 @@
     - "{{tools.files}}"
 
 - name: Use ephemeris shed install to install tools
-  command: >
+  command: "\
     {{galaxy_docker_docker_user_virtualenv}}/bin/shed-install
     -g localhost:{{galaxy_docker_provision_port}}
     -a {{galaxy_admin_api_key | default(galaxy_master_api_key)}}
-    -t {{galaxy_docker_tool_dir}}/{{item.path | basename}}
-  vars:
+    -t {{galaxy_docker_tool_dir}}/{{item.path | basename}}"
   with_items: "{{tools.files}}"
   ignore_errors: yes
   tags:
