folded yaml stripped style for long strings

--- a/roles/galaxy-docker/tasks/backups/cronbackupdb.yml
+++ b/roles/galaxy-docker/tasks/backups/cronbackupdb.yml
@@ -51,7 +51,8 @@
 
 - name: set backup jobs in cron
   cron:
-    job: "bash {{galaxy_docker_backup_location}}/scripts/{{item.key}}-backupscript.sh
+    job: >-
+      bash {{galaxy_docker_backup_location}}/scripts/{{item.key}}-backupscript.sh
       >> {{log_file}} 2>&1"
     state: present
     user: "{{galaxy_docker_docker_user}}"
