--- a/roles/galaxy-docker/vars/main.yml
+++ b/roles/galaxy-docker/vars/main.yml
@@ -21,9 +21,9 @@ galaxy_docker_ldap_config:
   "{{ galaxy_docker_ldap_defaults | combine(galaxy_docker_ldap_settings) }}"
 
 # vars for galaxy_docker_backup_cron
-galaxy_docker_backup_database_rsync_configuration: "\
+galaxy_docker_backup_database_rsync_configuration: >-
   {{ galaxy_docker_backup_rsync_settings_default |
-  combine(galaxy_docker_backup_database_rsync_settings) }}"
+  combine(galaxy_docker_backup_database_rsync_settings) }}
 
 # vars for galaxy_docker_provision_tools:
 galaxy_docker_ephemeris_package: ephemeris
