--- a/roles/galaxy-docker/tasks/backups/extractdb.yml
+++ b/roles/galaxy-docker/tasks/backups/extractdb.yml
@@ -65,7 +65,7 @@
     command: >-
       pg_dump {{galaxy_docker_container_database_name}}
       --format={{galaxy_docker_db_format}}
-      -Z {{galaxy_docker_db_compression_level}}"
+      -Z {{galaxy_docker_db_compression_level}}
     user: "{{galaxy_docker_database_user}}"
     file: "{{galaxy_docker_extracted_db_location}}/{{galaxy_docker_extracted_db_filename}}"
   ignore_errors: true
