--- a/roles/galaxy-docker/defaults/main.yml
+++ b/roles/galaxy-docker/defaults/main.yml
@@ -155,6 +155,8 @@ galaxy_docker_ephemeris_branch: "master"
 galaxy_docker_ephemeris_dir: "{{galaxy_docker_docker_user_home}}/ephemeris"
 galaxy_docker_ephemeris_from_git: False
 
+# Ignore ephemeris errors which can be annoying if setting up a new node.
+galaxy_docker_ignore_ephemeris_errors: True
 #defaults for upgrade
 galaxy_docker_test_upgrade: False
 
