--- a/roles/galaxy-docker/tasks/provision/installtools.yml
+++ b/roles/galaxy-docker/tasks/provision/installtools.yml
@@ -67,7 +67,7 @@
     -a {{galaxy_admin_api_key | default(galaxy_master_api_key)}}
     -t {{galaxy_docker_tool_dir}}/{{item.path | basename}}
   with_items: "{{tools.files}}"
-  ignore_errors: yes
+  ignore_errors: "{{galaxy_docker_ignore_ephemeris_errors}}"
   tags:
     - skip_ansible_lint  # does not create files.
 
