--- a/roles/galaxy-docker/tasks/template_galaxy_settings/setup_virtual_environment.yml
+++ b/roles/galaxy-docker/tasks/template_galaxy_settings/setup_virtual_environment.yml
@@ -1,3 +1,18 @@
+# -----
+# Copyright 2017 Sequencing Analysis Support Core - Leiden University Medical Center
+# Contact us at: sasc@lumc.nl
+#
+# This file is part of galaxy-launcher.
+#
+# galaxy-launcher is free software: you can redistribute it
+# and/or modify it under the terms of the MIT License (Expat) as
+# published by the Open Source initiative.
+#
+# You should have received a copy of the MIT License (Expat)
+# along with galaxy-launcher. If not, see
+# <https://opensource.org/licenses/MIT>.
+# .....
+
 - name: make sure galaxy_venv directory exists
   file:
     path: "{{galaxy_docker_cluster_virtualenv}}"
