--- a/roles/galaxy-docker/tasks/template_galaxy_settings/setup_virtual_environment.yml
+++ b/roles/galaxy-docker/tasks/template_galaxy_settings/setup_virtual_environment.yml
@@ -29,9 +29,9 @@
 
 - name: Install pinned-requirements
   pip:
-    requirements: "{{galaxy_docker_export_location}}/galaxy-central/lib/galaxy/dependencies/requirements.txt"
+    requirements: "{{galaxy_docker_export_location}}/galaxy-central/lib/galaxy/dependencies/pinned-requirements.txt"
     virtualenv: "{{galaxy_docker_cluster_virtualenv}}"
-    extra_args: >
+    extra_args: >-
       --index-url https://wheels.galaxyproject.org/simple
       --extra-index-url https://pypi.org/simple/
   when: galaxy_docker_cluster_virtualenv is defined
