--- a/test/host_vars/cluster-test/cluster_settings.yml
+++ b/test/host_vars/cluster-test/cluster_settings.yml
@@ -6,7 +6,9 @@ galaxy_docker_cluster_virtualenv: "{{galaxy_docker_shared_cluster_directory}}/ga
 galaxy_docker_cluster_environment_variables:
   LC_ALL: "en_US.UTF-8"
 galaxy_docker_shared_cluster_directory: "/exports/galaxy"
-
+galaxy_docker_docker_user: galaxy_docker
+galaxy_docker_database_user: galaxy_db
+galaxy_docker_web_user: galaxy_web
 galaxy_docker_cluster_registered_user_concurrent_jobs: 2
 galaxy_docker_cluster_anonymous_user_concurrent_jobs: 1
 galaxy_docker_cluster_embed_metadata_in_job: True
