--- a/roles/galaxy-docker/tasks/prepare_docker/change_uids.yml
+++ b/roles/galaxy-docker/tasks/prepare_docker/change_uids.yml
@@ -57,8 +57,8 @@
   when: bgruening_galaxy_stable_version == 18.01
   replace:
     path: "{{galaxy_docker_docker_build_dir}}/change_uid/galaxy/roles/galaxyprojectdotorg.galaxyextras/tasks/nginx.yml"
-    regexp: '\'galaxy\''
-    replace: '{{ galaxy_user_name }}'
+    regexp: "'galaxy'"
+    replace: '"{{ galaxy_user_name }}"'
 
 - name: Build docker image with changed_uids
   docker_image:
