use proper command

--- a/roles/galaxy-docker/tasks/prepare_docker/create_export_directory_folders.yml
+++ b/roles/galaxy-docker/tasks/prepare_docker/create_export_directory_folders.yml
@@ -21,7 +21,7 @@
     name: "export_folder_creator_{{ansible_date_time.epoch}}"
     state: started
     user: "{{galaxy_docker_web_user_id}}"
-    command: "python /usr/local/bin/export_user_files.py $PG_DATA_DIR_DEFAULT"
+    command: "/usr/local/bin/export_user_files.py $PG_DATA_DIR_DEFAULT"
   register: docker_container
 
 - name: Show docker_container variable
