--- a/roles/galaxy-docker/tasks/provision/import/import.yml
+++ b/roles/galaxy-docker/tasks/provision/import/import.yml
@@ -70,9 +70,10 @@
 - name: Import new database in galaxy container
   command: "docker exec -u {{user}} {{name}} {{galaxy_docker_db_restore_command}} {{flags}}"
   vars:
-    user: "{{galaxy_docker_database_user_id}}"
+    user: "{{galaxy_docker_web_user_id}}"
     name: "{{galaxy_docker_container_name}}"
     flags: >-
+      -h localhost
       -d {{galaxy_docker_container_database_name}}
       -U {{galaxy_docker_container_database_username}}
       {{galaxy_docker_db_input_file_flag}}
