split up cluster-test

--- a/.travis.yml
+++ b/.travis.yml
@@ -49,6 +49,14 @@ matrix:
         - ansible-galaxy install -r requirements.yml
         - bash -c 'source test/test_playbook.sh $test_hostname $privileged'
 
+    - env:
+        test_hostname: cluster-test2
+        privileged: False
+      install:
+        - pip install ansible==2.4.0
+      script:
+        - ansible-galaxy install -r requirements.yml
+        - bash -c 'source test/test_playbook.sh $test_hostname $privileged'
 # Keep inboxes nice and clean.
 notifications:
   email: false
