--- a/run/upgrade_custom_image.yml
+++ b/run/upgrade_custom_image.yml
@@ -19,3 +19,4 @@ galaxy_docker_run: True
 galaxy_docker_prepare_docker: True
 galaxy_docker_change_uids: True
 galaxy_docker_custom_image: True
+galaxy_docker_template: True
