--- a/roles/galaxy-docker/defaults/main.yml
+++ b/roles/galaxy-docker/defaults/main.yml
@@ -108,7 +108,7 @@ galaxy_docker_delete_backup_files: False
 galaxy_docker_cluster_type: sge
 galaxy_docker_cluster_registered_user_concurrent_jobs: 2
 galaxy_docker_cluster_anonymous_user_concurrent_jobs: 1
-galaxy_docker_cluster_embed_metadata_in_job: True
+galaxy_docker_cluster_embed_metadata_in_job: False
 galaxy_docker_cluster_environment_variables: {}
 galaxy_docker_cluster_default_destination: cluster
 galaxy_docker_cluster_sge_parallel_environment: make
