--- a/roles/galaxy-docker/tasks/prerequisites/nginxsettings.yml
+++ b/roles/galaxy-docker/tasks/prerequisites/nginxsettings.yml
@@ -88,12 +88,12 @@
   set_fact:
     ansible_selinux: False
   when:
-    - ansible_selinux != False | bool
+    - ansible_selinux
     - ansible_selinux.status == 'disabled'
 
 - name: show se linux
   debug:
-    var: ansible_selinux != False | bool
+    var: ansible_selinux
     verbosity: 1
 
 - name: install prerequisites for SElinux RedHat families
@@ -104,7 +104,7 @@
     - libselinux-python
     - libsemanage-python
   when:
-    - ansible_selinux != False | bool
+    - ansible_selinux
     - ansible_os_family == 'RedHat'
 
 - name: install prerequisites for SElinux Debian families
@@ -116,18 +116,18 @@
     - libsemanage-common
     - python-semanage
   when:
-    - ansible_selinux != False | bool
+    - ansible_selinux
     - ansible_os_family == 'Debian'
 
 - name: Set SE boolean so nginx will work.
-  when: ansible_selinux != False | bool
+  when: ansible_selinux
   seboolean:
     name: httpd_can_network_connect
     persistent: yes
     state: yes
 
 - name: Add public web port to se_linux
-  when: ansible_selinux != False | bool
+  when: ansible_selinux
   seport:
     ports: "{{galaxy_docker_web_port_public}}"
     setype: http_port_t
@@ -137,7 +137,7 @@
 
 - name: Add public test upgrade web port to se_linux
   when:
-    - ansible_selinux != False | bool
+    - ansible_selinux
     - galaxy_docker_test_upgrade
   seport:
     ports: "{{galaxy_docker_upgrade_test_settings.galaxy_docker_web_port_public}}"
