--- a/roles/installdocker/meta/main.yml
+++ b/roles/installdocker/meta/main.yml
@@ -47,7 +47,11 @@ galaxy_info:
   #
   # platforms is a list of platforms, and each platform has a name and a list of versions.
   #
-  # platforms:
+  platforms:
+    - name: Ubuntu
+      versions:
+        - 16.04
+
   # - name: Fedora
   #   versions:
   #   - all
